2010-04-4	Romain Francois <romain@r-enthusiasts.com>

	* inst/include/* : headers are moved to inst/include so that they are 
	are not duplicated on multi arch platforms

	* R/RcppLdPath.R: RcppCxxFlags is updated to reflect the above change

	* src/Makevars: simplified as the headers don't need to be copied to each 
	arch lib directory anymore

	* src/Makevars.win: same

	* inst/include/Rcpp/Vector.h : Vector<> gains a templated assignment 
	operator 
	
2010-04-2	Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Formula.h: new Rcpp::Formula class
	* inst/unitTests/runit.Formula.R: unit test for Rcpp::Formula

2010-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.11

	* debian/*: Similarly updated for new release to Debian

	* inst/examples/FastLM: Updated to use new create() method

        * inst/unitTests/runit.Matrix.R: New unit test new Matrix constructors

2010-03-26  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: Fixed bug in diag()

2010-03-23  Dirk Eddelbuettel  <edd@debian.org>

        * inst/unitTests/runit.CharacterVector.R: New unit test for bug found by Doug

2010-03-23  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: fixed critical bug. Vector did not have copy constructor
	and assignement operators

	* src/exceptions.cpp: added the demangle helper function to help debugging

	* src/RcppCommon.h: added the DEMANGLE macro and the RCPP_DEBUG macro to help
	debugging.

2010-03-20  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h : Vector gains a templated fill method to fill all
	elements of a vector with the same value

2010-03-19  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h : Matrix gains a diag method to create diagonal
	matrices

	* src/Rcpp/Named.h: Named is no longer a class, but a templated function.
	This preserves all the existing interface, but also allows Named to be used