@@ -63,6 +63,7 @@ template <> struct wrap_type_traits<float> { typedef wrap_type_primitive_tag wra
 template <> struct wrap_type_traits< std::complex<float> > { typedef wrap_type_primitive_tag wrap_category; } ;
 template <> struct wrap_type_traits< std::complex<double> > { typedef wrap_type_primitive_tag wrap_category; } ;
 
+template <> struct wrap_type_traits<long> { typedef wrap_type_primitive_tag wrap_category; } ;
 
 } // namespace traits
 } // namespace Rcpp
